// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`merge replace 1`] = `
{
  "a": {
    "b": {
      "d": "waw",
    },
  },
  "b": "dfe",
  "c": [
    "x",
    "y",
    "a",
    "b",
  ],
  "d": "d",
}
`;

exports[`merge replace 2`] = `
{
  "a": {
    "b": {
      "d": "waw",
    },
  },
  "b": "dfe",
  "c": [
    "a",
    "b",
  ],
  "d": "d",
}
`;
